update footer logo

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -171,7 +171,7 @@
         &copy; Copyright {{ currentYear() }} Creative Developments.net. All rights reserved.
       </div>
       <div class="col-sm-6 col-md-6 text-right">
-        <a href="/">Creative <span>Developments</span>.net</a>
+        <a class="footer__logo no-underline" href="/">Creative <span class="text-body">Developments</span>.net</a>
       </div>
     </div>
   </div>
