added anchor scrolling functionality

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -14,6 +14,7 @@
 }
 .header__logo {
   font-family: $font-family-trajan;
+  color: $secondary-color;
   font-size: 2.5rem;
   padding-top: 4rem;
   padding-bottom: 4rem;
