--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,4 +9,5 @@ $secondary-color: $conifer;
 $tertiary-color: $christi;
 
 // bootstrap overrides
-$link-color: $secondary-color;
+$link-color: $tertiary-color;
+$link-hover-color: $tertiary-color;
