--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,8 +6,9 @@
         Developing &amp; freelancing
       </div>
       <div class="col-sm-6 col-md-6 text-right">
-        Back to Top
-        <fa-icon class="pl-2" [icon]="faArrowUp"></fa-icon>
+        <a class="no-underline" routerLink="." fragment="back-to-top"
+          >Back to Top<fa-icon class="pl-3" [icon]="faArrowUp"></fa-icon
+        ></a>
       </div>
     </div>
   </div>
