tweaks to footer and header

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-sm-6 col-md-6 text-right">
         <a class="no-underline" routerLink="." fragment="back-to-top"
-          >Back to Top<fa-icon class="pl-3" [icon]="faArrowUp"></fa-icon
+          >Back to Top<fa-icon class="pl-3 text-body" [icon]="faArrowUp"></fa-icon
         ></a>
       </div>
     </div>
