added phone, email icons to footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -107,13 +107,13 @@
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
             <dd>
-              <i class="fa fa-phone small"></i>
-              <a class="footer__nav-link" href="tel:07932 566 488">07932 566 488</a>
+              <a class="footer__nav-link" href="tel:07932 566 488">
+                <fa-icon class="pr-3" [flip]="'horizontal'" [icon]="faPhone"></fa-icon>07932 566 488
+              </a>
             </dd>
             <dd>
-              <i class="fa fa-envelope-o small"></i>
               <a class="footer__nav-link" href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">
-                omar.creative.dev@gmail.com
+                <fa-icon class="pr-3" [icon]="faEnvelope"></fa-icon>omar.creative.dev@gmail.com
               </a>
             </dd>
           </dl>
