add responsive classes to footer content

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
   <div class="container py-4">
     <div class="row">
-      <div class="col-sm-6 col-md-6">
+      <div class="col-6">
         <fa-icon class="pr-2" [icon]="faCode"></fa-icon>
         Developing &amp; freelancing
       </div>
-      <div class="col-sm-6 col-md-6 text-right">
+      <div class="col-6 text-right">
         <a class="no-underline" routerLink="." fragment="back-to-top"
           >Back to Top<fa-icon class="pl-3 text-body" [icon]="faArrowUp"></fa-icon
         ></a>
@@ -168,10 +168,8 @@
   </div>
   <div class="container py-4">
     <div class="row">
-      <div class="col-sm-6 col-md-6">
-        &copy; Copyright {{ currentYear() }} Creative Developments.net. All rights reserved.
-      </div>
-      <div class="col-sm-6 col-md-6 text-right">
+      <div class="col-7 d-none d-md-block">&copy; Copyright Creative Developments. All rights reserved.</div>
+      <div class="col-md-5 col-sm-12 text-right">
         <a class="footer__logo no-underline" href="/">Creative <span class="text-body">Developments</span>.net</a>
       </div>
     </div>
