--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
   <div class="footer__nav-bg">
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
             <dd class="d-inline-flex pr-4 pb-4">
@@ -59,7 +59,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
             <dd class="col-6"><a class="footer__nav-link" href="/">Home</a></dd>
@@ -72,7 +72,7 @@
             <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
           </dl>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
             <dd class="col-6">
@@ -101,9 +101,7 @@
             </dd>
           </dl>
         </div>
-      </div>
-      <div class="row align-items-end">
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
             <dd>
@@ -118,7 +116,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd class="d-inline-flex pr-4">
@@ -139,7 +137,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-lg-4">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd class="d-inline-flex pr-4">
