footer spacing adjustments

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -15,51 +15,51 @@
   <div class="footer__nav-bg">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center internet-explorer-color footer__icon"
                 [icon]="faInternetExplorer"
               ></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon class="d-inline-flex justify-content-center opera-color footer__icon" [icon]="faOpera"></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center firefox-color footer__icon"
                 [icon]="faFirefox"
               ></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center chrome-color footer__icon"
                 [icon]="faChrome"
               ></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center safari-color footer__icon"
                 [icon]="faSafari"
               ></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center android-color footer__icon"
                 [icon]="faAndroid"
               ></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon class="d-inline-flex justify-content-center apple-color footer__icon" [icon]="faApple"></fa-icon>
             </dd>
-            <dd class="d-inline-flex pr-4 pb-4">
+            <dd class="d-inline-flex pr-4">
               <fa-icon class="d-inline-flex justify-content-center footer__icon" [icon]="faLinux"></fa-icon>
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
             <dd class="col-6"><a class="footer__nav-link" href="/">Home</a></dd>
@@ -72,7 +72,7 @@
             <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
             <dd class="col-6">
@@ -101,7 +101,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
             <dd>
@@ -116,7 +116,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd class="d-inline-flex pr-4">
@@ -137,7 +137,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd class="d-inline-flex pr-4">
