--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,7 +2,7 @@
 @import '~src/styles/mixins';
 
 .footer__nav-bg {
-  padding: 6rem 0;
+  padding: 6rem 0 2rem;
   @include bannerBg();
 }
 .footer__nav-list,
