--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="flex-grow-1">
+<main class="flex-grow-1 container spacer">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
