--- a/src/app/features/home/home-page/home-page.component.html
+++ b/src/app/features/home/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<h1 class="text-center">HI! I'M OMAR, & I'M A FREELANCE FRONT END WEB DEVELOPER.</h1>
+<p class="text-center">
+  I have over 12 years solid industry experience and I'm available for hire as a full time front end developer on a
+  daily rate. Welcome to my online portfolio designed to showcase examples of my work and the different skills I have
+  acquired along the way.
+</p>
