--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -43,16 +43,13 @@ a:visited,
   font-style: italic;
 }
 
-h1 {
-  @include h1();
-}
-
-h2 {
-  @include h2();
+h1, h2 {
+  font-size: 2.5rem;
+  margin-bottom: 3.0rem;
 }
 
 h3 {
-  @include h3();
+  font-size: 2.0rem;
 }
 
 h1,
