typography updates, remove redundant link

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -62,11 +62,9 @@
         <div class="col-sm-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
-            <dd class="col-6"><a class="footer__nav-link" href="/">Home</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/hire-me.html">Hire Me</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/services/">Services</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
@@ -166,8 +164,8 @@
   </div>
   <div class="container py-4">
     <div class="row">
-      <div class="col-7 d-none d-md-block">&copy; Copyright Creative Developments. All rights reserved.</div>
-      <div class="col-md-5 col-sm-12 text-right">
+      <div class="col-7 d-none d-lg-block">&copy; Copyright Creative Developments. All rights reserved.</div>
+      <div class="col-lg-5 col-sm-12 text-right">
         <a class="footer__logo no-underline" href="/">Creative <span class="text-body">Developments</span>.net</a>
       </div>
     </div>
