footer and home page updates

--- a/src/app/features/home/home-page/home-page.component.html
+++ b/src/app/features/home/home-page/home-page.component.html
@@ -1,4 +1,7 @@
-<h1 class="text-center">HI! I'M OMAR, & I'M A FREELANCE FRONT END WEB DEVELOPER.</h1>
+<h1 class="text-center">
+  HI! <span class="text-tertiary">I'M OMAR</span>, & I'M A FREELANCE <span class="text-tertiary">FRONT END</span> WEB
+  <span class="text-tertiary">DEVELOPER</span>.
+</h1>
 <p class="text-center">
   I have over 12 years solid industry experience and I'm available for hire as a full time front end developer on a
   daily rate. Welcome to my online portfolio designed to showcase examples of my work and the different skills I have
