--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer>
   <div class="container py-4">
     <div class="row">
-      <div class="col-6">
+      <div class="col-7 d-none d-md-block">
         <fa-icon class="pr-2" [icon]="faCode"></fa-icon>
         Developing &amp; freelancing
       </div>
-      <div class="col-6 text-right">
+      <div class="col-md-5 col-sm-12 text-right">
         <a class="no-underline" routerLink="." fragment="back-to-top"
           >Back to Top<fa-icon class="pl-3 text-body" [icon]="faArrowUp"></fa-icon
         ></a>
@@ -15,7 +15,7 @@
   <div class="footer__nav-bg">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
             <dd class="d-inline-flex pr-4">
@@ -59,7 +59,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
             <dd class="col-6"><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
@@ -70,7 +70,7 @@
             <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
             <dd class="col-6">
@@ -99,7 +99,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Contact <span class="text-white">Info</span></dt>
             <dd>
@@ -114,7 +114,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd class="d-inline-flex pr-4">
@@ -135,7 +135,7 @@
             </dd>
           </dl>
         </div>
-        <div class="col-sm-6 col-lg-4 pb-5">
+        <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd class="d-inline-flex pr-4">
@@ -166,7 +166,9 @@
     <div class="row">
       <div class="col-7 d-none d-lg-block">&copy; Copyright Creative Developments. All rights reserved.</div>
       <div class="col-lg-5 col-sm-12 text-right">
-        <a class="footer__logo no-underline" href="/">Creative <span class="text-body">Developments</span>.net</a>
+        <a class="footer__logo text-tertiary no-underline" href="/"
+          >Creative <span class="text-body">Developments</span>.net</a
+        >
       </div>
     </div>
   </div>
