--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -77,3 +77,5 @@ h6 {
 .chrome-color { color: $gold; }
 .android-color { color: $conifer; }
 .apple-color { color: $iron; }
+
+.text-tertiary { color: $tertiary-color; }
