calculate years of experience and remove redundant scss file

--- a/src/app/features/home/home-page/home-page.component.html
+++ b/src/app/features/home/home-page/home-page.component.html
@@ -3,7 +3,7 @@
   <span class="text-tertiary">DEVELOPER</span>.
 </h1>
 <p class="text-center">
-  I have over 12 years solid industry experience and I'm available for hire as a full time front end developer on a
-  daily rate. Welcome to my online portfolio designed to showcase examples of my work and the different skills I have
-  acquired along the way.
+  I have {{ yearsOfExperience }} years solid industry experience and I'm available for hire as a full time front end
+  developer on a daily rate. Welcome to my online portfolio designed to showcase examples of my work and the different
+  skills I have acquired along the way.
 </p>
