--- a/src/app/features/home/home-page/home-page.component.html
+++ b/src/app/features/home/home-page/home-page.component.html
@@ -3,7 +3,8 @@
   <span class="text-tertiary">DEVELOPER</span>.
 </h1>
 <p class="text-center">
-  I have {{ yearsOfExperience }} years solid industry experience and I'm available for hire as a full time front end
-  developer on a daily rate. Welcome to my online portfolio designed to showcase examples of my work and the different
-  skills I have acquired along the way.
+  I have {{ yearsOfExperience }} years solid industry experience and I'm available for
+  <a [routerLink]="['/hire-me']">hire</a> as a full time front end developer on a daily rate. Welcome to my online
+  <a [routerLink]="['/portfolio']">portfolio</a> designed to showcase examples of my work and the different
+  <a [routerLink]="['/my-skills']">skills</a> I have acquired along the way.
 </p>
