--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -62,12 +62,12 @@
         <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
-            <dd class="col-6"><a class="footer__nav-link" href="/about-me.html">About Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/about-me">About Me</a></dd>
             <dd class="col-6"><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/hire-me.html">Hire Me</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/my-skills.html">My Skills</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/contact-me.html">Contact Me</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/sitemap.html">Sitemap</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/hire-me">Hire Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/my-skills">My Skills</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/contact-me">Contact Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" href="/sitemap">Sitemap</a></dd>
           </dl>
         </div>
         <div class="col-md-6 col-lg-4 pb-5">
