removed sitemap links

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -32,12 +32,6 @@
         >
           <fa-icon class="pr-3 header__social-icon" [icon]="faPrint"></fa-icon>Print page
         </a>
-        <a
-          class="header__social-link text-body d-inline-flex align-items-center no-underline"
-          [routerLink]="['/sitemap']"
-        >
-          <fa-icon class="pr-3 header__social-icon" [icon]="faSitemap"></fa-icon>Sitemap
-        </a>
       </div>
     </div>
   </div>
@@ -54,7 +48,7 @@
                 class="header__nav-link no-underline"
                 [routerLink]="['/about-me']"
                 [routerLinkActive]="'header__nav-link--active'"
-                >ABOUT</a
+                >ABOUT ME</a
               >
             </li>
             <li class="d-inline-flex">
@@ -78,7 +72,7 @@
                 class="header__nav-link no-underline"
                 [routerLink]="['/my-skills']"
                 [routerLinkActive]="'header__nav-link--active'"
-                >SKILLS</a
+                >MY SKILLS</a
               >
             </li>
             <li class="d-inline-flex">
@@ -87,7 +81,7 @@
                 [routerLink]="['/contact-me']"
                 [routerLinkActive]="'header__nav-link--active'"
               >
-                CONTACT</a
+                CONTACT ME</a
               >
             </li>
           </ul>
