replaced print and sitemap header links with github and bitbucket links

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -26,11 +26,18 @@
       </div>
       <div class="col-md-4 text-right d-none d-md-block">
         <a
-          href="#"
+          href="https://github.com/omarCreativeDev"
+          target="_blank"
           class="header__social-link text-body pr-5 d-inline-flex align-items-center no-underline"
-          (click)="print()"
         >
-          <fa-icon class="pr-3 header__social-icon" [icon]="faPrint"></fa-icon>Print page
+          <fa-icon class="pr-3 header__social-icon" [icon]="faGithub"></fa-icon>Github
+        </a>
+        <a
+          href="https://bitbucket.org/omarCreativeDev"
+          target="_blank"
+          class="header__social-link text-body d-inline-flex align-items-center no-underline"
+        >
+          <fa-icon class="pr-3 header__social-icon bitbucket-color" [icon]="faBitbucket"></fa-icon>Bitbucket
         </a>
       </div>
     </div>
