added contact-me route, module

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -50,10 +50,10 @@
         <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
             <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
-            <dd class="col-6"><a class="footer__nav-link" href="/about-me">About Me</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/my-skills">My Skills</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/portfolio/">Portfolio</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" href="/contact-me">Contact Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/about-me']">About Me</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/my-skills']">My Skills</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/portfolio']">Portfolio</a></dd>
+            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/contact-me']">Contact Me</a></dd>
           </dl>
         </div>
         <div class="col-md-6 col-lg-4 pb-5">
