--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -69,7 +69,7 @@
             <li class="d-inline-flex">
               <a
                 class="header__nav-link no-underline"
-                [routerLink]="['/portfolio/']"
+                [routerLink]="['/portfolio']"
                 [routerLinkActive]="'header__nav-link--active'"
                 >PORTFOLIO</a
               >
