--- a/src/app/features/home/components/featured-work/featured-work.component.html
+++ b/src/app/features/home/components/featured-work/featured-work.component.html
@@ -1,1 +1,53 @@
-<p>featured-work works!</p>
+<div class="featured-work__bg">
+  <article class="container text-center">
+    <div class="row">
+      <div class="col-12">
+        <h3>Featured <span class="text-tertiary">Work</span></h3>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
+        <a
+          href="/assets/images/portfolio/interoute-pricing.jpg"
+          title="Featured Work | Interoute | Pricing"
+          class="featured-work__client-link mb-5 mb-md-0"
+        >
+          <img
+            src="/assets/images/portfolio/interoute-pricing-featured-thumb.jpg"
+            class="featured-work__client-img"
+            alt="Featured Work | Interoute | Pricing"
+            title="Featured Work | Interoute | Pricing"
+          />
+        </a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
+        <a
+          href="/assets/images/portfolio/interoute-basket.jpg"
+          title="Featured Work | Interoute | Basket"
+          class="featured-work__client-link mb-5 mb-md-0"
+        >
+          <img
+            src="/assets/images/portfolio/interoute-basket-featured-thumb.jpg"
+            class="featured-work__client-img"
+            alt="Featured Work | Interoute | Basket"
+            title="Featured Work | Interoute | Basket"
+          />
+        </a>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
+        <a
+          href="/assets/images/portfolio/interoute-quick-deployment.jpg"
+          title="Featured Work | Interoute | Quick Deployment"
+          class="featured-work__client-link mb-5 mb-md-0"
+        >
+          <img
+            src="/assets/images/portfolio/interoute-quick-deployment-featured-thumb.jpg"
+            class="featured-work__client-img"
+            alt="Featured Work | Interoute | Quick Deployment"
+            title="Featured Work | Interoute | Quick Deployment"
+          />
+        </a>
+      </div>
+    </div>
+  </article>
+</div>
