--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 // http://chir.ag/projects/name-that-color/#26478D
 $mine-shaft: #303030;
+$gray: #888888;
 $white: #fff;
 $mercury: #e6e6e6;
 $gallery: #ececec;
