get featured work lightbox working

--- a/src/app/features/home/components/featured-work/featured-work.component.html
+++ b/src/app/features/home/components/featured-work/featured-work.component.html
@@ -12,43 +12,43 @@
       <div class="row d-flex justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
           <a
+            data-fancybox="gallery"
+            data-caption="Featured Work | Interoute | Pricing"
             href="/assets/images/portfolio/interoute-pricing.jpg"
-            title="Featured Work | Interoute | Pricing"
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
               src="/assets/images/portfolio/interoute-pricing-featured-thumb.jpg"
               class="featured-work__client-img"
               alt="Featured Work | Interoute | Pricing"
-              title="Featured Work | Interoute | Pricing"
             />
           </a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
           <a
+            data-fancybox="gallery"
+            data-caption="Featured Work | Interoute | Basket"
             href="/assets/images/portfolio/interoute-basket.jpg"
-            title="Featured Work | Interoute | Basket"
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
               src="/assets/images/portfolio/interoute-basket-featured-thumb.jpg"
               class="featured-work__client-img"
               alt="Featured Work | Interoute | Basket"
-              title="Featured Work | Interoute | Basket"
             />
           </a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 d-flex justify-content-center">
           <a
+            data-fancybox="gallery"
+            data-caption="Featured Work | Interoute | Quick Deployment"
             href="/assets/images/portfolio/interoute-quick-deployment.jpg"
-            title="Featured Work | Interoute | Quick Deployment"
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
               src="/assets/images/portfolio/interoute-quick-deployment-featured-thumb.jpg"
               class="featured-work__client-img"
               alt="Featured Work | Interoute | Quick Deployment"
-              title="Featured Work | Interoute | Quick Deployment"
             />
           </a>
         </div>
