--- a/src/app/features/home/components/things-i-do/things-i-do.component.html
+++ b/src/app/features/home/components/things-i-do/things-i-do.component.html
@@ -1,1 +1,67 @@
-<p>things-i-do works!</p>
+<div class="container things-i-do">
+  <div class="row">
+    <div class="col-12">
+      <h4 class="text-center">
+        Things <span class="text-tertiary">I</span> Do <span class="text-tertiary">Well</span>
+      </h4>
+      <p class="text-center pb-5">
+        I have a wide range of skills in both front end development and design. Here are the core technologies I work
+        with on a daily basis.
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-lg-6 d-flex pb-5">
+      <fa-icon
+        class="things-i-do__icon mr-5 js-color d-flex justify-content-center align-items-center"
+        [icon]="faJs"
+        [size]="'8x'"
+      ></fa-icon>
+      <div class="flex-row">
+        <h5>Javascript</h5>
+        <p class="m-0">
+          I write object oriented javascript code that's both cross browser and cross platform compatible using native
+          vanilla javascript or any of the modern frameworks such as angular.
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-lg-6 d-flex pb-5">
+      <fa-icon
+        class="things-i-do__icon mr-5 css3-color d-flex justify-content-center align-items-center"
+        [icon]="faCss3Alt"
+        [size]="'8x'"
+      ></fa-icon>
+      <div class="flex-row">
+        <h5>CSS3</h5>
+        <p class="m-0">
+          I like to write cross browser object oriented CSS code. This encourages code reuse and, ultimately, faster and
+          more efficient stylesheets that are easier to add to and maintain.
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-lg-6 d-flex pb-5">
+      <fa-icon
+        class="things-i-do__icon mr-5 html5-color d-flex justify-content-center align-items-center"
+        [icon]="faHtml5"
+        [size]="'8x'"
+      ></fa-icon>
+      <div class="flex-row">
+        <h5>HTML5</h5>
+        <p class="m-0">
+          I write semantic and meaningful markup that is documented and easy to read. This means it can be maintained
+          and scaled in the future, and allows co-workers to quickly pick it up.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <p class="text-center capabilities">
+        Or visit <a [routerLink]="['/my-skills']">my skills</a> page for a full breakdown of my capabilities as a front
+        end developer.
+      </p>
+    </div>
+  </div>
+</div>
