tweak html5 color

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -67,11 +67,10 @@ h6 {
 .linked-in-color { color: $boston-blue; }
 
 .bitbucket-color { color: $blue-ribbon; }
+.opera-color { color: $radical-red; }
 
-.opera-color,
-.html5-color { color: $radical-red; }
-
-.firefox-color { color: $cinnabar; }
+.firefox-color,
+.html5-color { color: $cinnabar; }
 
 .chrome-color,
 .js-color { color: $gold; }
