wip recommendations component

--- a/src/app/features/home/pages/home-page/home-page.component.html
+++ b/src/app/features/home/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
 <app-intro></app-intro>
 <app-featured-work></app-featured-work>
 <app-things-i-do></app-things-i-do>
-<app-client-feedback></app-client-feedback>
+<app-recommendations></app-recommendations>
