--- a/src/app/features/home/components/recommendations/recommendations.component.scss
+++ b/src/app/features/home/components/recommendations/recommendations.component.scss
@@ -2,3 +2,9 @@
   margin-top: 10rem;
   margin-bottom: 10rem;
 }
+
+.recommendations__image {
+  border-radius: 100%;
+  height: 7rem;
+  width: auto;
+}
