--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,7 @@
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
+@import '~@glidejs/glide/src/assets/sass/glide.core';
+@import '~@glidejs/glide/src/assets/sass/glide.theme';
 
 // common
 @import 'helpers';
