--- a/src/app/features/home/components/things-i-do/things-i-do.component.html
+++ b/src/app/features/home/components/things-i-do/things-i-do.component.html
@@ -5,8 +5,8 @@
         Things <span class="text-tertiary">I</span> Do <span class="text-tertiary">Well</span>
       </h4>
       <p class="text-center pb-5">
-        I have a wide range of skills in both front end development and design. Here are the core technologies I work
-        with on a daily basis.
+        I have a wide range of skills in front end development. Here are the core technologies I work with on a daily
+        basis.
       </p>
     </div>
   </div>
