--- a/src/app/features/home/components/recommendations/recommendations.component.scss
+++ b/src/app/features/home/components/recommendations/recommendations.component.scss
@@ -1,3 +1,5 @@
+@import '~src/styles/variables';
+
 .recommendations {
   margin-top: 10rem;
   margin-bottom: 10rem;
@@ -7,4 +9,18 @@
   border-radius: 100%;
   height: 7rem;
   width: auto;
+}
+
+.glide__bullet {
+  background: $mercury;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 100%;
+  margin-right: 1rem;
+  padding: 0;
+  border: none;
+}
+
+.glide__bullet--active {
+  background: $tertiary-color;
 }
