added wip more-info and avatar-and-hobbies components

--- a/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
+++ b/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
@@ -1,1 +1,10 @@
-<p>about-me-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-8">
+      <app-more-info></app-more-info>
+    </div>
+    <div class="col-4">
+      <app-avatar-and-hobbies></app-avatar-and-hobbies>
+    </div>
+  </div>
+</div>
