--- a/src/app/features/about-me/components/more-info/more-info.component.html
+++ b/src/app/features/about-me/components/more-info/more-info.component.html
@@ -1,1 +1,19 @@
-<p>more-info works!</p>
+<h1>About <span class="text-tertiary">me</span></h1>
+<p>
+  Creative Developments aka Omar Mirza is a freelance front end web developer with 11 years commercial experience
+  located in Barkingside, London. My aim is to develop <a [routerLink]="['/portfolio']">amazing websites</a> that my
+  clients and I both love.
+</p>
+
+<h2>Overview</h2>
+<p>
+  I am proficient in taking complex <a [routerLink]="['/portfolio']">projects</a> from conception to reality using solid
+  programming principles and agile methodologies. I possess a forward thinking approach to developing front end
+  architecture that’s both scalable and modular whilst also conforming to web accessibility standards.
+</p>
+
+<h3>WHAT <span class="text-tertiary">I</span> DO</h3>
+<p>
+  Javascript, CSS3 and HTML5 and much more! See <a [routerLink]="['/my-skills']">my skills</a> for full details. If you
+  are interested in hiring me please <a [routerLink]="['/contact-me']">get in touch</a>!
+</p>
