created shared years-of-experience component

--- a/src/app/features/about-me/components/more-info/more-info.component.html
+++ b/src/app/features/about-me/components/more-info/more-info.component.html
@@ -1,8 +1,8 @@
 <h1>About <span class="text-tertiary">me</span></h1>
 <p>
-  Creative Developments aka Omar Mirza is a freelance front end web developer with 11 years commercial experience
-  located in Barkingside, London. My aim is to develop <a [routerLink]="['/portfolio']">amazing websites</a> that my
-  clients and I both love.
+  Creative Developments aka Omar Mirza is a freelance front end web developer with
+  <app-years-of-experience></app-years-of-experience> years commercial experience located in Barkingside, London. My aim
+  is to develop <a [routerLink]="['/portfolio']">amazing websites</a> that my clients and I both love.
 </p>
 
 <h2>Overview</h2>
