updated avatar-and-hobbies component

--- a/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
+++ b/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
@@ -1,1 +1,4 @@
-<p>avatar-and-hobbies works!</p>
+<h4>My <span class="text-tertiary">Avatar</span></h4>
+<img class="avatar-and-hobbies__image" src="/assets/images/about-me/avatar-and-hobbies.jpg" />
+
+<h5>My <span class="text-tertiary">Hobbies</span></h5>
