--- a/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
+++ b/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-9">
       <app-more-info></app-more-info>
     </div>
-    <div class="col-4">
+    <div class="col-md-3">
       <app-avatar-and-hobbies></app-avatar-and-hobbies>
     </div>
   </div>
