added highcharts pie chart to about me page

--- a/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
+++ b/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
@@ -2,3 +2,5 @@
 <img class="avatar-and-hobbies__image" src="/assets/images/about-me/avatar-and-hobbies.jpg" />
 
 <h5>My <span class="text-tertiary">Hobbies</span></h5>
+
+<highcharts-chart [Highcharts]="highcharts" [options]="chartOptions"></highcharts-chart>
