fix layout issues

--- a/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
+++ b/src/app/features/about-me/components/avatar-and-hobbies/avatar-and-hobbies.component.html
@@ -1,6 +1,10 @@
-<h4>My <span class="text-tertiary">Avatar</span></h4>
-<img class="avatar-and-hobbies__image" src="/assets/images/about-me/avatar-and-hobbies.jpg" />
-
-<h5>My <span class="text-tertiary">Hobbies</span></h5>
-
-<highcharts-chart [Highcharts]="highcharts" [options]="chartOptions"></highcharts-chart>
+<div class="row">
+  <div class="col-6 col-lg-12">
+    <h4>My <span class="text-tertiary">Avatar</span></h4>
+    <img class="avatar-and-hobbies__image" src="/assets/images/about-me/avatar-and-hobbies.jpg" />
+  </div>
+  <div class="col-12 col-sm-6 col-md-6">
+    <h5>My <span class="text-tertiary">Hobbies</span></h5>
+    <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions"></highcharts-chart>
+  </div>
+</div>
