added wip my-skills-summary component, updated my skills page

--- a/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
+++ b/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
@@ -1,1 +1,13 @@
-<p>my-skills-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1>My <span class="text-tertiary">skills</span></h1>
+      <p>
+        Welcome to my skills page, here you can see more information about my skills. Please click on a skill group for
+        more details.
+      </p>
+
+      <app-my-skills-summary></app-my-skills-summary>
+    </div>
+  </div>
+</div>
