styled my-skills-summary component

--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
@@ -1,9 +1,9 @@
-<article id="my-skills__summary">
-  <dl class="html">
-    <dt>HTML</dt>
-    <dd>XHTML</dd>
-    <dd>HTML5</dd>
-    <dd>Semantic Markup</dd>
-    <dd>Jade template engine</dd>
+<article class="mb-5">
+  <dl class="my-skills-summary__group html">
+    <dt class="my-skills-summary__label">HTML</dt>
+    <dd class="my-skills-summary__item">XHTML</dd>
+    <dd class="my-skills-summary__item">HTML5</dd>
+    <dd class="my-skills-summary__item">Semantic Markup</dd>
+    <dd class="my-skills-summary__item">Jade template engine</dd>
   </dl>
 </article>
