--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,7 @@
 // http://chir.ag/projects/name-that-color/#26478D
 $mine-shaft: #303030;
 $gray: #888888;
+$alto: #d3d3d3;
 $white: #fff;
 $mercury: #e6e6e6;
 $gallery: #ececec;
